--- a/app/src/main/res/layout/activity_dashboard_bottom_slide.xml
+++ b/app/src/main/res/layout/activity_dashboard_bottom_slide.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Listen To Your Favorites"
+                android:text="@string/listen_to_fav"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/_12sdp" />
 
