--- a/app/src/main/res/layout/fragment_genre_wise_playlist.xml
+++ b/app/src/main/res/layout/fragment_genre_wise_playlist.xml
@@ -112,6 +112,17 @@
 
         </FrameLayout>
 
+        <FrameLayout
+            android:id="@+id/search_playlist_detail_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible">
+
+        </FrameLayout>
 
 
         <com.wang.avi.AVLoadingIndicatorView
