--- a/app/src/main/res/layout/item_horizontal_artist_list.xml
+++ b/app/src/main/res/layout/item_horizontal_artist_list.xml
@@ -62,17 +62,17 @@
 <!--        app:layout_constraintTop_toBottomOf="@+id/textView_head"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"/>-->
 
-    <TextView
-        android:id="@+id/albumsCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0 Albums"
-        android:textColor="@color/md_grey_600"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintStart_toEndOf="@id/artist_image"
-        app:layout_constraintTop_toBottomOf="@id/textView_head"/>
+<!--    <TextView-->
+<!--        android:id="@+id/albumsCount"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="0 Albums"-->
+<!--        android:textColor="@color/md_grey_600"-->
+<!--        android:gravity="center"-->
+<!--        android:layout_marginStart="@dimen/_15sdp"-->
+<!--        android:layout_marginTop="@dimen/_15sdp"-->
+<!--        app:layout_constraintStart_toEndOf="@id/artist_image"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/textView_head"/>-->
 
     <TextView
         android:id="@+id/songCount"
@@ -81,9 +81,9 @@
         android:text="0 Songs"
         android:textColor="@color/md_grey_600"
         android:gravity="center"
-        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintStart_toEndOf="@id/albumsCount"
+        app:layout_constraintStart_toEndOf="@id/artist_image"
         app:layout_constraintTop_toBottomOf="@+id/textView_head"/>
 
             <TextView
