--- a/app/src/main/res/layout/fragment_library_artist_detail.xml
+++ b/app/src/main/res/layout/fragment_library_artist_detail.xml
@@ -210,7 +210,7 @@
                             android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
                             android:layout_gravity="center_vertical"
-                            android:text="Songs"
+                            android:text="@string/songs"
                             android:textColor="@color/see_all"
                             android:textSize="20sp" />
 
