--- a/app/src/main/res/layout/activity_video_episode.xml
+++ b/app/src/main/res/layout/activity_video_episode.xml
@@ -249,7 +249,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:layout_marginEnd="8dp"
-                    android:text="Add to my list"
+                    android:text="@string/add_to_my_list"
+                    android:gravity="center"
                     android:textColor="@color/md_white_1000"
                     android:textSize="@dimen/_10sdp"
                     app:layout_constraintEnd_toEndOf="@+id/add_image_layout"
@@ -263,7 +264,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:layout_marginEnd="8dp"
-                    android:text="Like this movie"
+                    android:text="@string/like_movie"
+                    android:gravity="center"
                     android:textColor="@color/md_white_1000"
                     android:textSize="@dimen/_10sdp"
                     app:layout_constraintEnd_toEndOf="@+id/thumb_image_layout"
@@ -275,7 +277,7 @@
                     android:id="@+id/view2"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_11sdp"
                     android:background="#5F5F5F"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -288,7 +290,7 @@
                     android:layout_height="35dp"
                     android:layout_marginStart="@dimen/_18sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:text="MORE EPISODES"
+                    android:text="@string/more_episodes"
                     android:textColor="#F9FCFB"
                     android:textSize="@dimen/_14sdp"
                     app:layout_constraintStart_toStartOf="parent"
