--- a/app/src/main/res/layout/fragment_password_reset_mobile.xml
+++ b/app/src/main/res/layout/fragment_password_reset_mobile.xml
@@ -34,7 +34,7 @@
             android:layout_marginBottom="12dp"
             android:gravity="center"
             android:padding="@dimen/_5sdp"
-            android:text="Please confirm your code"
+            android:text="@string/reset_confirm_code"
             android:textColor="@color/md_white_1000"
             android:textSize="@dimen/_14sdp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -98,7 +98,7 @@
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:padding="@dimen/_5sdp"
-            android:text="Resend Code"
+            android:text="@string/resend_code"
             android:textColor="@color/md_white_1000"
             android:textSize="@dimen/_14sdp"
             app:layout_constraintStart_toStartOf="parent"
