--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -44,7 +44,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:layout_gravity="center_vertical"
-                            android:text="Recent search"
+                            android:text="@string/recent_search"
                             android:textColor="@color/md_white_1000"
                             android:textSize="@dimen/_15sdp"
                             android:layout_marginStart="@dimen/_5sdp"
