--- a/app/src/main/res/layout/alert_dialog_subscription.xml
+++ b/app/src/main/res/layout/alert_dialog_subscription.xml
@@ -93,7 +93,7 @@
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:gravity="center"
-                android:text="CLOSE"
+                android:text="@string/close"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
