--- a/app/src/main/res/layout/fragment_mylist_video.xml
+++ b/app/src/main/res/layout/fragment_mylist_video.xml
@@ -16,9 +16,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="My List"
+            android:text="@string/my_list"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/_22sdp"
+            android:textSize="@dimen/_18sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
