--- a/app/src/main/res/layout/new_playlist_creation.xml
+++ b/app/src/main/res/layout/new_playlist_creation.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:hint="New Playlist"
+            android:hint="@string/new_playlist"
             android:gravity="center"
             android:textColorHint="@color/md_grey_600"
             android:textColor="#FFFFFF"
