--- a/app/src/main/res/layout/tab_video_mylist_normal.xml
+++ b/app/src/main/res/layout/tab_video_mylist_normal.xml
@@ -21,7 +21,7 @@
             android:textSize="@dimen/_11sdp"
             android:lineSpacingExtra="8sp"
             android:singleLine="true"
-            android:text="My List"
+            android:text="@string/my_list"
             android:textColor="#5B5B5B" />
 
         <ImageView
