--- a/app/src/main/res/layout/activity_video_dashboard.xml
+++ b/app/src/main/res/layout/activity_video_dashboard.xml
@@ -195,7 +195,7 @@
                         android:paddingLeft="@dimen/_20sdp"
                         android:textSize="@dimen/_15sdp"
                         android:textColor="@color/colorWhite"
-                        android:text="@string/menu_chile_mode"
+                        android:text="Child Mode"
                         android:fontFamily="@font/futuranext_book"/>
 
                 </RelativeLayout>
